--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,9 @@ body {
     color: #ecece4;
     max-width: 1277px;
     width: 100%;
+    margin: 0;
+    padding: 0;
+
 }
 
 table {
@@ -13,13 +16,17 @@ table {
 header {
     background-image: url("images/hero-image.png");
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: cover;
+    background-position: center;
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 60vh;
+    width: 100%;
+    min-height: 400px;
     /* justify-content: center; */
-    height: 697px;
-    max-height: 100%;
+
+
 
 
 }
@@ -50,6 +57,10 @@ li {
     max-width: 1400px;
 } */
 
+.space {
+    height: 400px;
+}
+
 .logo {
     margin: 30px;
 }
@@ -66,7 +77,7 @@ li {
 
 .starBeer {
     position: relative;
-    margin-top: -250px;
+    margin-top: -20vh;
     max-height: 402px;
     height: 100%;
     max-width: 406px;
@@ -78,4 +89,38 @@ li {
     height: 100%;
     max-width: 594px;
     width: 100%;
+}
+
+/* Media queries for responsiveness */
+@media (max-width: 768px) {
+    header {
+        height: 50vh; /* Adjust height for smaller screens */
+    }
+
+    nav ul {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    nav ul li {
+        margin-bottom: 10px;
+    }
+}
+
+@media (max-width: 480px) {
+    header {
+        height: 40vh; /* Adjust height for even smaller screens */
+    }
+
+    .logo img {
+        max-width: 80%;
+    }
+
+    .banner {
+        flex-direction: column;
+    }
+
+    .starBeer, .circleMusic {
+        max-width: 90%;
+    }
 }
