--- a/styles.css
+++ b/styles.css
@@ -113,8 +113,8 @@ li {
 }
 
 .gridText {
-width: 190px;
-font-size: 18pt;
+    width: 190px;
+    font-size: 18pt;
 }
 
 /* .grid-image {
@@ -122,6 +122,17 @@ font-size: 18pt;
     flex-direction: column;
     justify-content: space-bet
 } */
+
+footer {
+    background-color: #454545;
+    display: flex;
+    flex-direction: flex-start;
+}
+
+.socialMedia {
+    display: flex;
+    flex-direction: row;
+}
 
 /* Media queries for responsiveness */
 @media (max-width: 768px) {
