--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #ecece4;
+    background-color: #00558e;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
     max-width: 1277px;
@@ -8,13 +8,11 @@ body {
     padding: 0 auto;
 }
 
-table {
-    text-align: center;
-}
-
 img {
     margin: 0 auto;
     text-align: center;
+    height: auto;
+    width: 100%;
 }
 
 p {
@@ -50,7 +48,7 @@ header {
 nav {
     width: 50%;
     max-width: 900px;
-} 
+}
 
 ul {
     display: flex;
@@ -61,6 +59,8 @@ ul {
 
 li {
     list-style: none;
+    cursor: not-allowed;
+
 }
 
 /* .inline-block {
@@ -82,6 +82,7 @@ li {
     justify-content: center;
     align-items: center;
 }
+
 .banner {
     display: flex;
     flex-direction: flex-start;
@@ -89,6 +90,7 @@ li {
     align-items: flex-start;
     max-width: 1277px;
     width: 100%;
+    background-color: #ecece4;
 
 }
 
@@ -111,11 +113,13 @@ li {
 .circlesGrid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     justify-content: center;
     justify-items: center;
     column-gap: 40px;
     row-gap: 40px;
+    padding: 5% 16px;
+    background-color: #ecece4;
 }
 
 .gridText {
@@ -133,31 +137,54 @@ footer {
     background-color: #454545;
     display: flex;
     flex-direction: flex-start;
+    justify-content: space-around;
+    padding: 20px;
+}
+
+.hours {
+    width: 30%;
+    font-size: 2vw;
+    color: white;
+    display: flex;
+    padding: 5%;
+}
+
+.mapImg {
+    width: 100%;
+    padding: 5%;
+
 }
 
 .socialMedia {
     display: flex;
     flex-direction: row;
+    align-items: center;
+
 }
 
-/* Media queries for responsiveness */
+.socialMedia img {
+    padding: 5%;
+}
+
 @media (max-width: 972px) {
     header {
         height: 50vh;
-        /* Adjust height for smaller screens */
+
     }
-
-
 
     nav ul li {
         margin-bottom: 10px;
+    }
+
+    .hours {
+        font-size: 16px;
     }
 }
 
 @media (max-width: 803px) {
     header {
         height: 40vh;
-        /* Adjust height for even smaller screens */
+
     }
 
     nav ul {
@@ -182,7 +209,7 @@ footer {
 @media (max-width: 704px) {
     header {
         height: 30vh;
-        /* Adjust height for even smaller screens */
+
     }
 
     .logo img {
@@ -197,12 +224,41 @@ footer {
     .circleMusic {
         max-width: 90%;
     }
+
+    .mapImg {
+        display: none;
+    }
+}
+
+@media (max-width: 655px) {
+
+    .starBeer {
+        position: relative;
+        margin-top: -13vh;
+        max-height: 402px;
+        height: 100%;
+        max-width: 406px;
+        width: 100%;
+    }
+
+    .circlesGrid {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        justify-content: center;
+        justify-items: center;
+        column-gap: 40px;
+        row-gap: 40px;
+    }
+
+
+
 }
 
 @media (max-width: 480px) {
     header {
         height: 30vh;
-        /* Adjust height for even smaller screens */
+
     }
 
     .logo img {
@@ -218,4 +274,18 @@ footer {
     .circleMusic {
         max-width: 90%;
     }
+}
+
+@media (max-width: 426px) {
+
+    .circlesGrid {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+        justify-content: center;
+        justify-items: center;
+        column-gap: 40px;
+        row-gap: 40px;
+    }
+
 }
